--- a/Asset/CSS/style.css
+++ b/Asset/CSS/style.css
@@ -4,10 +4,7 @@
   box-sizing: border-box;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
-body{
-  height: 5000px;
-  background-color: rgba(255, 0, 0, 0.445);
-}
+
 nav {
   width: 100%;
   height: 70px;
@@ -19,8 +16,9 @@ nav {
   box-shadow: -9px 1px 18px 0px;
   position: sticky;
   top: 0;
-  z-index:1;
+  z-index: 1;
 }
+
 .left_side {
   width: 15%;
   height: 50px;
@@ -32,6 +30,7 @@ nav {
   justify-content: center;
   align-items: center;
 }
+
 .center_side {
   width: 20%;
   height: 50px;
@@ -46,6 +45,7 @@ ul {
   align-items: center;
   list-style: none;
 }
+
 li {
   width: auto;
   height: auto;
@@ -54,6 +54,7 @@ li {
   align-items: center;
   /* border: 1px solid black; */
 }
+
 li > button {
   width: 100%;
   height: 100%;
@@ -65,6 +66,7 @@ li > button {
   cursor: pointer;
   color: grey;
 }
+
 ul li::after {
   content: "";
   width: 0;
@@ -74,9 +76,11 @@ ul li::after {
   margin: auto;
   transition: 0.5s;
 }
+
 ul li:hover::after {
   width: 100%;
 }
+
 .right_side {
   width: 33%;
   height: 50px;
@@ -86,6 +90,7 @@ ul li:hover::after {
   justify-content: space-evenly;
   align-items: center;
 }
+
 .search_bar_main {
   width: 350px;
   height: 40px;
@@ -97,11 +102,13 @@ ul li:hover::after {
   border-bottom-right-radius: 20px;
   border-bottom-left-radius: 20px;
 }
+
 .search_bar {
   width: 312px;
   height: 40px;
   /* border: 1px solid rgb(0, 255, 191); */
 }
+
 .search_bar > input {
   width: 100%;
   height: 100%;
@@ -112,16 +119,26 @@ ul li:hover::after {
   font-size: 1rem;
   color: gray;
 }
+#submit {
+  width: 25px;
+  height: 25px;
+  border: none;
+  background: transparent;
+  cursor: pointer;
+}
+
 .search_icon {
   width: 25px;
   height: 25px;
   /* border: 1px solid black; */
 }
+
 .add_to_cart_main {
   width: 58px;
   height: 40px;
   /* border: 1px solid green; */
 }
+
 #add_to_cart_button {
   width: 100%;
   height: 100%;
@@ -131,11 +148,13 @@ ul li:hover::after {
   justify-content: center;
   align-items: center;
 }
+
 .cart_icon {
   width: 30px;
   height: 30px;
   /* border: 1px solid black; */
 }
+
 .counter {
   width: 22px;
   height: 22px;
@@ -149,10 +168,154 @@ ul li:hover::after {
   align-items: center;
   font-weight: 600;
 }
-.hello{
+
+.hello {
   width: 200px;
   height: 200px;
   border: 1px solid black;
-margin-top: 10px;
+  margin-top: 10px;
   background-color: aquamarine;
+}
+
+.container {
+  /* margin-top: 15px; */
+  padding-top: 20px;
+  width: 100%;
+  height: 5000px;
+  background-color: aqua;
+  border: 1px solid black;
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+}
+.product_card {
+  margin-top: 20px;
+  width: 350px;
+  height: 640px;
+  border: 1px solid black;
+  border-radius: 25px;
+  overflow: hidden;
+  background-color: whitesmoke;
+}
+.product_image {
+  width: 100%;
+  height: 430px;
+  overflow: hidden;
+  /* border: 1px solid black; */
+}
+.product_image > img {
+  width: 100%;
+  height: 100%;
+}
+.product_image:hover > img {
+  transform: scale(1.05);
+  transition: 1s ease;
+}
+.brand_name {
+  width: 100%;
+  height: 30px;
+  /* border: 1px solid black; */
+  display: flex;
+  margin-top: 5px;
+  justify-content: center;
+  /* justify-content: center; */
+  align-items: center;
+  color: rgb(134, 101, 40);
+}
+.product_details {
+  width: 100%;
+  height: 40px;
+  margin-top: 5px;
+  /* border: 1px solid black; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+.product_rating_main {
+  /* margin-top: 5px; */
+  width: 100%;
+  height: 40px;
+  /* border: 1px solid black; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.product_rating {
+  width: 100px;
+  height: 30px;
+  background-color: #35a742;
+  border-radius: 5px;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 13px;
+  font-weight: 600;
+}
+.star_icon {
+  width: 10px;
+  height: 10px;
+
+  margin-left: 3px;
+  margin-right: 3px;
+  /* border: 1px solid black; */
+}
+.star_icon > img {
+  width: 100%;
+  height: 100%;
+  margin-bottom: 20px;
+}
+.price_main {
+  /* margin-top: 6px; */
+  width: 100%;
+  height: 30px;
+  /* border: 1px solid black; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 14px;
+  font-weight: 600;
+}
+.over_price {
+  font-weight: 500;
+  font-size: 14px;
+  margin-left: 5px;
+}
+.off {
+  font-weight: 500;
+  margin-left: 5px;
+  color: #866528;
+  font-size: 14px;
+}
+.add_to_bag_main {
+  width: 100%;
+  height: 40px;
+  margin-top: 7px;
+  /* border: 1px solid #866528; */
+  padding: 0px 10px;
+}
+#add_to_bag {
+  width: 100%;
+  height: 100%;
+  color: white;
+  background-color: #866528;
+  cursor: pointer;
+  border: none;
+  padding: 1px;
+  border-radius: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.bag_icon {
+  width: 25px;
+  height: 25px;
+  /* border: 1px solid black; */
+  margin-right: 10px;
+}
+.bag_icon > img {
+  width: 100%;
+  height: 100%;
 }
