--- a/Asset/CSS/style.css
+++ b/Asset/CSS/style.css
@@ -181,7 +181,7 @@ ul li:hover::after {
   /* margin-top: 15px; */
   padding-top: 20px;
   width: 100%;
-  height: 5000px;
+  height: auto;
   background-color: aqua;
   border: 1px solid black;
   display: flex;
