--- a/Asset/CSS/cart.css
+++ b/Asset/CSS/cart.css
@@ -16,7 +16,7 @@ body {
 }
 .clear_all_data_main{
     width: 100%;
-    height: 50px;
+    height: auto;
     /* border: 1px solid black; */
     display: flex;
     align-items: center;
@@ -54,6 +54,28 @@ body {
     height: 100%;
 
 }
+
+.back_to_home{
+  width: 228px;
+  height: 40px;
+  border: none;
+  font-size: 1rem;
+  background-color: #866528;
+  color: white;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
+  border-radius: 20px;
+  padding: 0 18px;
+  margin-right: 24px;
+}
+
+.back_to_home > img {
+  margin-right: 4px;
+}
+
 .container {
   width: 100%;
   height: auto;
